[package]
name = "sway-marker"
description = "Simple popup for using marks in Sway"
repository = "https://github.com/ilyazzz/sway-marker"
license = "GPLv3"
version = "0.1.0"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2018"

[dependencies]
gtk = "0.9.2"
gtk-layer-shell = "0.2.0"
swayipc = "2.7.2"
clap = "2.33.3"
