[package]
name = "sway-marker"
description = "Simple popup for using marks in Sway"
repository = "https://github.com/ilyazzz/sway-marker"
license = "GPLv3"
version = "0.3.0"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2018"

[dependencies]
gtk = "0.16.2"
gtk-layer-shell = "0.5.0"
swayipc = "3.0.1"
clap = { version = "4.0.32", features = ["cargo"] }
